create auth helpers.

--- a/src/.env.example
+++ b/src/.env.example
@@ -1,2 +1,11 @@
 APP_NAME="the-boy-who-lived"
 APP_VERSION="0.1"
+
+
+MONGODB_URL="mongodb://admin:admin@localhost:27017"
+MONGODB_DATABASE="harry"
+
+
+SECRET_KEY = "" # Replace with your actual secret key
+ALGORITHM = "HS256"
+ACCESS_TOKEN_EXPIRE_MINUTES = 30
