--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -4,3 +4,6 @@ motor==3.1.1
 pydantic-mongo==2.3.0
 pymongo==4.3.3
 pydantic[email]==2.9.2
+python-jose==3.3.0
+passlib[bcrypt]==1.7.4
+python-multipart==0.0.10
