--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -8,3 +8,8 @@ python-jose==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.12
 pydantic-settings==2.5.2
+langchain==0.3.4
+langchain-community==0.3.3
+langchain-core==0.3.12
+langgraph==0.2.39
+langchain-ollama==0.2.0
