add google api key to env variables

--- a/src/.env.example
+++ b/src/.env.example
@@ -8,3 +8,5 @@ MONGODB_DATABASE="harry"
 
 SECRET_KEY = "" # Replace with your actual secret key
 ALGORITHM = "HS256"
+
+GOOGLE_API_KEY = "" #Rplace with your api key
