--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -10,6 +10,6 @@ python-multipart==0.0.12
 pydantic-settings==2.5.2
 langchain==0.3.4
 langchain-community==0.3.3
-langchain-core==0.3.12
+langchain-core==0.3.21
 langgraph==0.2.39
-langchain-ollama==0.2.0
+langchain_google_genai==2.0.5
