Use model name as an env variable.

--- a/src/.env.example
+++ b/src/.env.example
@@ -9,4 +9,6 @@ MONGODB_DATABASE="harry"
 SECRET_KEY = "" # Replace with your actual secret key
 ALGORITHM = "HS256"
 
+
+MODEL_NAME = "gemini-1.5-flash"
 GOOGLE_API_KEY = "" #Rplace with your api key
